#summary Changelog for all changes since the fork

= Changes =
== Version 1.09 ==
  * Vibrate when last article is reached, not only when trying to move further but the moment you reach it.
  * Changed buttons and layout for article-browsing
  
== Version 1.08 ==
  * Fixed connectivity-problems (no more endless waiting with spinning activity-wheel)
  * Added preference to disable swipe and instead use buttons for browsing articles. Still a bit buggy.

== Version 1.07 (4) ==
  * Improved speed of getCounters-API-call and database-access in method insertArticle()
  * Allow receiving of gzip-compressed data
  * Removed more unnecessary code due to dropped support of servers below 1.5.3
  * Wrote new Connector with new JSON-parser "GSON" from google (included in Android since API-lvl 11)
  * Fixed some problems with the counters for Fresh/Starred/Published articles
  * Faster refresh of the UI when marking anything
  * Fixed small bug which rendered the ImageCache unusable
  * Fixed Labels and two ANR-Situations
  * Fixed "Mark all read" for Labels
  * Fixed "Invert sort" for category-view
  * Bugfixes

== Version 1.06 ==
  * Removed support for server-versions lower then 1.5.3
  * Added progress-information and UI-refresh to ImageCache but only while articles are fetched
  * Added support for Labels

== Version 1.05 ==
  * Refreshing more often during update, show progress
  * Reduced the number of updates beeing done, every piece of data is updated only once in 2 minutes if necessary or if you do refresh manually (via menu).
  * Store articles marked as read also for whole feeds/categoires. You can mark a feed as read while working offline, all articles in it the moment you marked it read will be synchronized with the server when you get online next time.
  * Refactored ImageCache, removed unused abstractions
  * Fixed some bugs
  * Fixed a problem with articles beeing marked as read only when opening the feed