@@ -115,7 +115,7 @@
         
     <item>Version 0.9.5:
             \n * Fixed error-message for API_DISABLED not beeing displayed
-            \n * Fixed swype-here-notification not beeing displayed
+            \n * Fixed swipe-here-notification not beeing displayed
             \n * Changed zoom-behaviour (default: Images are scaled, once zoomed: Images are displayed in right aspect-ratio)
             \n * Fixed broken next/previous article/feed jump when returning from article-view
             \n * Images are not fetched from online-sources anymore if browsing in Offline-mode
